...
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorWhite">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
...
